2009-12-17  Adam Roben  <aroben@apple.com>

        Sync JavaScriptCore.vcproj with JavaScriptCore.xcodeproj and the
        source tree

        Fixes <http://webkit.org/b/32665>.

        Reviewed by Ada Chan.

        * JavaScriptCore.vcproj/JavaScriptCore/JavaScriptCore.vcproj: Moved
        around files and filters so that the structure matches
        JavaScriptCore.xcodeproj and the source tree. A few headers that were
        previously omitted have been added, as well as JSZombie.{cpp,h}.

2009-12-17  Adam Roben  <aroben@apple.com>

        Remove HeavyProfile and TreeProfile completely

        These were mostly removed in r42808, but the empty files were left in
        place.

        Fixes <http://webkit.org/b/32664>.

        Reviewed by John Sullivan.

        * Android.mk:
        * GNUmakefile.am:
        * JavaScriptCore.gypi:
        * JavaScriptCore.pri:
        * JavaScriptCore.vcproj/JavaScriptCore/JavaScriptCore.vcproj:
        * JavaScriptCoreSources.bkl:
        Removed HeavyProfile/TreeProfile source files.

        * profiler/HeavyProfile.cpp: Removed.
        * profiler/HeavyProfile.h: Removed.
        * profiler/TreeProfile.cpp: Removed.
        * profiler/TreeProfile.h: Removed.

2009-12-17  Martin Robinson  <martin.james.robinson@gmail.com>

        Reviewed by Gustavo Noronha Silva.

        [GTK] WebKit GTK needs a wrapper for ref counted glib/gobject structs
        https://bugs.webkit.org/show_bug.cgi?id=21599

        Implement GRefPtr, a smart pointer for reference counted GObject types.

        * GNUmakefile.am:
        * wtf/gtk/GOwnPtr.cpp:
        (WTF::GDir):
        * wtf/gtk/GRefPtr.h: Added.
        (WTF::):
        (WTF::GRefPtr::GRefPtr):
        (WTF::GRefPtr::~GRefPtr):
        (WTF::GRefPtr::clear):
        (WTF::GRefPtr::get):
        (WTF::GRefPtr::operator*):
        (WTF::GRefPtr::operator->):
        (WTF::GRefPtr::operator!):
        (WTF::GRefPtr::operator UnspecifiedBoolType):